# pvr.sevensky

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
debian/: changelog.in  control  copyright  kodi-pvr-demo.install  rules
pvr.sevensky/: addon.xml
pvr.sevensky/resources/: settings.xml
pvr.sevensky/resources/language/: strings.po
src/: addon.cpp
